@@ -109,7 +109,7 @@
 #  define CONF_WITH_ASSERT 0
 # endif
 # ifndef USE_STOP_INSN_TO_FREE_HOST_CPU
-#  define USE_STOP_INSN_TO_FREE_HOST_CPU 0 /* Good idea to disable ? */
+#  define USE_STOP_INSN_TO_FREE_HOST_CPU 0
 # endif
 # ifndef CONF_WITH_DESK1
 #  define CONF_WITH_DESK1 0 /* Sad but necessary to fit size requirements */
